hphp/hack/test/typecheck/reactive/memoize_mutable4.php.exp
File "memoize_mutable4.php", line 4, characters 3-88:
__Mutable and __MaybeMutable annotations are not allowed on static methods. (Parsing[1002])
