hphp/hack/test/typecheck/reactive/memoize_mutable4.php
<?hh // partial

class A {
  <<__Rx, __MemoizeLSB, __Mutable>>
  public static function f(): int {
    return 1;
  }
}
